--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.15.2",
     "@mantine/core": "7.15.2",
     "@mantine/hooks": "7.15.2",
     "@mantinex/mantine-logo": "^1.1.0",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
+    "embla-carousel-react": "^7.1.0",
     "next": "15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1"
